fixed service-alert style on mobile

--- a/FE/app/styles/modules/car-profile/_car-profile-header.scss
+++ b/FE/app/styles/modules/car-profile/_car-profile-header.scss
@@ -233,7 +233,10 @@
 
 	.mobile-version{
 		.service-alert{
-			margin: 48px auto 80px auto;
+			margin: 18px auto 36px auto;
+			position: relative;
+			left: 50%;
+			@include transform(translateX(-50%) scale(0.7));
 		}
 		.car-card-slick-container{
 			text-align: center;
